sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_false_departlane/errors.duarouter
Error: Invalid departLane definition for vehicle '1'
Quitting (on error).
